# danbooru-tag

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_workflow.md  tech_stack_and_dependencies.md
data/: scalable_scraping_result.json
docs/: development_history.md  test_validation_tags.md  want.md
docs/data/: _index.md
docs/data/0_raw/: danbooru-tags-2024.md  danbooru-wiki-2024_df.pkl.md  scalable_scraping_result.json.md
docs/data/1_intermediate/: danbooru_tags_top1m.pkl.md  danbooru_tags_top20k.pkl.md  tag_classification_result.pkl.md  tag_counts_all.pkl.md  tag_groups.pkl.md
docs/eda/: log.md  questions.md
scripts/: convert_tag_groups_to_pickle.py  query_body_parts.py  run_genre_analysis.py  scalable_hierarchy_scraper.py
src/: create_tag_counts.py  create_top_n_samples.py  incremental_pickle.py  lightweight_sample.py  scalable_hierarchy_scraper.py
src/analyze_cluster/: genre_analyzer.py  quick_test.py  run_genre_analysis.py  test_genres_lightweight.py
src/mcp_server/danbooru_tag_mcp/: __init__.py
